# tarot-dot-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: pyproject.toml
backend/app/: main.py  models.py
backend/app/data/cards/: cups.json  major.json  pentacles.json  swords.json  wands.json
backend/app/routes/: draw.py  reading.py
backend/app/services/: claude.py  deck.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  styles.css
frontend/src/components/: Reading.vue  SpreadBoard.vue  TarotCard.vue
frontend/src/lib/: api.ts
